Today i have started the frontend and i have devloped login and signup pages  and other files

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,13 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+
+   <!--  App Title -->
+    <title>NextLearn</title>
+
+    <!-- Fixed Favicon -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
+    <meta name="description" content="NextLearn - A modern LMS platform for students and instructors." />
+    <meta name="keywords" content="NextLearn, LMS, Courses, Learning, Education, React, Online Learning" />
+    <meta name="author" content="NextLearn Team" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
+
   <body>
     <div id="root"></div>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
